Update spacing issue for aside.

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ body {
   overflow: hidden;
   display: block;
   margin-top: 24px;
+  padding-bottom: 24px;
 }
 .section {
   width: calc(66% - 24px);
